.cabal-sandbox/logs/ghc-8.6.5/hspec-core-2.9.4-8Ow8BPZG9mY9fp4nNbYOfA.log
cabal: Entering directory '/tmp/cabal-tmp-874/hspec-core-2.9.4'
Configuring hspec-core-2.9.4...
Preprocessing library for hspec-core-2.9.4..
Building library for hspec-core-2.9.4..
[ 1 of 40] Compiling Control.Concurrent.Async ( vendor/Control/Concurrent/Async.hs, dist/dist-sandbox-11ecf6a4/build/Control/Concurrent/Async.o )
[ 2 of 40] Compiling Data.Algorithm.Diff ( vendor/Data/Algorithm/Diff.hs, dist/dist-sandbox-11ecf6a4/build/Data/Algorithm/Diff.o )
[ 3 of 40] Compiling Paths_hspec_core ( dist/dist-sandbox-11ecf6a4/build/autogen/Paths_hspec_core.hs, dist/dist-sandbox-11ecf6a4/build/Paths_hspec_core.o )
[ 4 of 40] Compiling Test.Hspec.Core.Compat ( src/Test/Hspec/Core/Compat.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Compat.o )
[ 5 of 40] Compiling Test.Hspec.Core.Clock ( src/Test/Hspec/Core/Clock.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Clock.o )
[ 6 of 40] Compiling GetOpt.Declarative.Types ( src/GetOpt/Declarative/Types.hs, dist/dist-sandbox-11ecf6a4/build/GetOpt/Declarative/Types.o )
[ 7 of 40] Compiling GetOpt.Declarative.Environment ( src/GetOpt/Declarative/Environment.hs, dist/dist-sandbox-11ecf6a4/build/GetOpt/Declarative/Environment.o )
[ 8 of 40] Compiling Test.Hspec.Core.Example.Location ( src/Test/Hspec/Core/Example/Location.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Example/Location.o )
[ 9 of 40] Compiling Test.Hspec.Core.Formatters.Diff ( src/Test/Hspec/Core/Formatters/Diff.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/Diff.o )
[10 of 40] Compiling Test.Hspec.Core.Formatters.Pretty.Parser.Types ( src/Test/Hspec/Core/Formatters/Pretty/Parser/Types.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/Pretty/Parser/Types.o )
[11 of 40] Compiling Test.Hspec.Core.Formatters.Pretty.Parser ( src/Test/Hspec/Core/Formatters/Pretty/Parser.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/Pretty/Parser.o )
[12 of 40] Compiling Test.Hspec.Core.Formatters.Pretty.Unicode ( src/Test/Hspec/Core/Formatters/Pretty/Unicode.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/Pretty/Unicode.o )
[13 of 40] Compiling Test.Hspec.Core.Formatters.Pretty ( src/Test/Hspec/Core/Formatters/Pretty.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/Pretty.o )
[14 of 40] Compiling Test.Hspec.Core.Formatters.V1.Free ( src/Test/Hspec/Core/Formatters/V1/Free.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/V1/Free.o )
[15 of 40] Compiling Test.Hspec.Core.Timer ( src/Test/Hspec/Core/Timer.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Timer.o )
[16 of 40] Compiling Test.Hspec.Core.Util ( src/Test/Hspec/Core/Util.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Util.o )
[17 of 40] Compiling Test.Hspec.Core.QuickCheckUtil ( src/Test/Hspec/Core/QuickCheckUtil.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/QuickCheckUtil.o )
[18 of 40] Compiling Test.Hspec.Core.Example ( src/Test/Hspec/Core/Example.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Example.o )
[19 of 40] Compiling Test.Hspec.Core.Tree ( src/Test/Hspec/Core/Tree.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Tree.o )
[20 of 40] Compiling Test.Hspec.Core.Shuffle ( src/Test/Hspec/Core/Shuffle.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Shuffle.o )
[21 of 40] Compiling Test.Hspec.Core.Spec.Monad ( src/Test/Hspec/Core/Spec/Monad.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Spec/Monad.o )
[22 of 40] Compiling Test.Hspec.Core.Hooks ( src/Test/Hspec/Core/Hooks.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Hooks.o )
[23 of 40] Compiling Test.Hspec.Core.Spec ( src/Test/Hspec/Core/Spec.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Spec.o )
[24 of 40] Compiling Test.Hspec.Core.QuickCheck ( src/Test/Hspec/Core/QuickCheck.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/QuickCheck.o )
[25 of 40] Compiling Test.Hspec.Core.Format ( src/Test/Hspec/Core/Format.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Format.o )
[26 of 40] Compiling Test.Hspec.Core.Runner.Eval ( src/Test/Hspec/Core/Runner/Eval.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Runner/Eval.o )
[27 of 40] Compiling Test.Hspec.Core.Formatters.V1.Monad ( src/Test/Hspec/Core/Formatters/V1/Monad.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/V1/Monad.o )
[28 of 40] Compiling Test.Hspec.Core.Formatters.Internal ( src/Test/Hspec/Core/Formatters/Internal.hs, dist/dist-sandbox-11ecf6a4/build/Test/Hspec/Core/Formatters/Internal.o )

src/Test/Hspec/Core/Formatters/Internal.hs:53:1: error:
    Could not find module `System.Console.ANSI'
    There are files missing in the `ansi-terminal-0.11.1' package,
    try running 'ghc-pkg check'.
    Use -v to see a list of the files searched for.
   |
53 | import           System.Console.ANSI
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cabal: Leaving directory '/tmp/cabal-tmp-874/hspec-core-2.9.4'
